# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: __init__.py  cli.py  engine.py  game_logic.py  games_logic.py  games_math.py  generators.py  pu_service.py  se_service.py
brain_games/games/: br_calc.py  br_even.py  br_gcd.py  br_prime.py  br_prog.py  calc.py  even.py  gcd.py  prime.py  prog.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
