[tool.poetry]
packages = [{ include = "brain_games" },]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ferliness <reason.life@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
